[package]
name = "ginkgo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
once_cell = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
